--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,3 +4,15 @@ ja:
       payment_method:
         credit_card: 'クレジットカード'
         transfer: '銀行振込'
+      status:
+        wait: '入金待ち'
+        confirm: '入金確認'
+        production: '製作中'
+        ready: '発送準備中'
+        sent: '発送済み'
+    order_detail:
+      making:
+        impossible: '製作不可'
+        wait: '製作待ち'
+        production: '製作中'
+        completion: '製作完了'
